# cryosense-hk-framework

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cryosense_hk/: __init__.py  config.py  features.py  metrics.py  models.py  selection.py  uncertainty.py
data/: README.md  hakkari_glacier_area_2000_2024_gee_executed.csv  hakkari_spei_sonuclari.csv
data/spatial/: hakkari_glaciers_glims.gpkg  natural_earth_turkey.geojson  natural_earth_turkey_provinces.geojson
docs/: REPRODUCIBILITY.md
outputs/tables/: table_01_source_manifest.csv  table_02_descriptive_statistics.csv  table_03_annual_indicators.csv  table_04_climate_trends.csv  table_05_spei_drought_stress.csv  table_06_gee_glacier_merged.csv  table_07_gee_glacier_correlations.csv  table_08_phase_threshold_calibration.csv  table_09_phase_threshold_holdout_metrics.csv  table_10_temporal_split_protocol.csv  table_11_feature_group_ablation.csv  table_12_training_only_feature_selection.csv  table_13_feature_selection_effect.csv  table_14_decision_layer_validation.csv  table_15_proposed_selected_features.csv  table_16_heldout_model_and_baselines.csv  table_16b_event_classification_metrics.csv  table_16c_paired_bootstrap_skill_tests.csv  table_16d_event_confusion_matrices.csv  table_17_rolling_origin_folds.csv  table_18_rolling_origin_summary.csv  table_19_shap_feature_importance_by_horizon.csv  table_20_glacier_cryosense_linkage_dataset.csv  table_21_glacier_linkage_validation.csv  table_22_glacier_linkage_predictions.csv  table_23_glacier_linkage_associations.csv  (+4 more)
tests/: test_smoke.py
